Trabalhando com folha de estilo

--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,11 @@ body {
   background-color: #cccfff;
 
 }
+.terc-bloco {
+  padding: 26px;
+  background-color: #db7fff;
+
+}
 
 h2 {
   padding-left: 10px;
