--- a/css/main.css
+++ b/css/main.css
@@ -1,43 +1,22 @@
-body {
-
+.bg-body {
   background-color: #88D7F9;
+
 }
 
-.header-page {
-  padding-left: 8px;
-  color: #BA47FC;
-}
-.op-menu {
-  position: fixed;
-  text-transform: uppercase;
-}
-
-.nav-top {
-  background-color: #BA47FC;
-}
-
-.nav-top a {
+nav a {
   float: left;
+  text-transform: uppercase;
+  font-weight: bold;
   color: 	#e05eac;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
+  padding: 16px 14px;
+  font-size: 14px;
 
-.nav-top a:hover {
-  background-color: #88D7F9;
-  color: #BA47FC;
-}
-
-.nav-top a.active {
-  background-color: #88D7F9;
-  color: white;
 }
 
 .banner-hm {
   width: 100%;
   height: 450px;
+
 }
 
 .seg-bloco {
@@ -60,4 +39,32 @@ h2 {
 p {
   font-size: 20px;
   padding-left: 35px;
+
+}
+
+.packet-service {
+  width: 940px;
+  margin: 0 auto;
+
+}
+
+.packet-service li {
+  display: inline-block;
+  text-align: center;
+  padding-top: 0;
+  padding: 50px 0;
+  width: 33%;
+  vertical-align: top;
+}
+
+.packet-service h2 {
+  font-size: 30px;
+  font-weight: bold;
+
+}
+
+.packet-service img {
+  width: 200px;
+  height: 250px;
+
 }
