--- a/view/css/main.css
+++ b/view/css/main.css
@@ -45,18 +45,19 @@ p {
 
 .packet-service {
   width: 940px;
+  padding: 50px 0;
   margin: 0 auto;
-
 }
 
 .packet-service li {
   display: inline-block;
   text-align: center;
-  padding-top: 0;
-  padding: 50px 0;
   width: 33%;
   vertical-align: top;
+  margin: 0 1.5;
+  padding: 30px 20px;
   box-sizing: border-box;
+  border: 2px solid #000000
 }
 
 .packet-service h2 {
@@ -71,6 +72,5 @@ p {
 
 }
 .packet-service p {
-  font-size: 18px;
-  margin-top: 8px;
+  font-size: 16px;
 }
